# isnobalpyx

./: .gitignore  CMakeLists.txt  README.md  environment.yml
libisnobalpyx/: CMakeLists.txt  constants.h  net_radiation.c  snowpack.cpp  snowpack.h
libisnobalpyx/data/: flux.h  input_forcing.h  run_configuration.h  snowlayers.h
libisnobalpyx/physics/: constants.h  energy_balance.cpp  energy_balance.h
libisnobalpyx/physics/energy_balance/: net_radiation.c  net_radiation.h
tests/: CMakeLists.txt  _main.cpp  test_net_radiation.cpp
tests/physics/: test_energy_balance.cpp
tests/physics/energy_balance/: test_net_radiation.cpp
